Fix layout bug on fixed media in reveal.js 6

--- a/css/source/custom/layouts.scss
+++ b/css/source/custom/layouts.scss
@@ -227,7 +227,7 @@ body.reveal-ready {
     position: absolute;
     top: 0; left: 0;
     right: 0; bottom: 0;
-    margin: auto;
+    margin: 0;
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
